--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,52 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>music_player</title>
+    <!-- <style>
+    .sideul
+    {
+      top: 66px;
+    left: 4px;
+    text-align: center;
+    position: absolute;
+    list-style-type:none;
+    margin:0;
+    padding:0;
+    /* overflow:hidden; */
+    background:#eee ;
+    }
+    .sideli
+    {
+      width: 128px;
+      left: 4px;
+    }
+    .a:link,.a:visited
+    {
+    display:block;
+    width:120px;
+    font-weight:bold;
+    color:#FFFFFF;
+    background-color:#bebebe;
+    /* text-align:center; */
+    padding:4px;
+    text-decoration:none;
+    text-transform:uppercase;
+    }
+    .a:hover,.a:active
+    {
+    background-color:#cc0000;
+    }
+</style> -->
   </head>
   <body>
     <noscript>
+      
       <strong>We're sorry but music_player doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <!-- <ul class="sideul">
+      <li class="sideli"><a class="a" href="#/">Home</a></li>
+      <li class="sideli"><a class="a" href="#/todo">Todo</a></li>
+      <li class="sideli"><a class="a" href="#/other">Other</a></li>
+    </ul> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
